--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -20,9 +20,17 @@
 
   <!-- Right Content -->
   <div class="content" #contentSection>
-    <app-projects></app-projects>
-    <app-certificates></app-certificates>
-    <app-experience></app-experience>
-    <app-social></app-social>
+    <section id="projects" class="section">
+      <app-projects></app-projects>
+    </section>
+    <section id="certificates" class="section">
+      <app-certificates></app-certificates>
+    </section>
+    <section id="experience" class="section">
+      <app-experience></app-experience>
+    </section>
+    <section id="social" class="section">
+      <app-social></app-social>
+    </section>
   </div>
 </div>
