File stracture corrected

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -26,8 +26,17 @@
     <section id="experience" class="section">
       <app-experience></app-experience>
     </section>
+    <section id="education" class="section">
+      <app-education></app-education>
+    </section>
+    <section id="skills" class="section">
+      <app-skills></app-skills>
+    </section>
     <section id="projects" class="section">
       <app-projects></app-projects>
+    </section>
+    <section id="achievements" class="section">
+      <app-achievements></app-achievements>
     </section>
     <section id="certificates" class="section">
       <app-certificates></app-certificates>
