--- a/src/app/components/education/education.component.html
+++ b/src/app/components/education/education.component.html
@@ -2,19 +2,27 @@
   <h2>Education</h2>
   <div class="education-list">
     <div class="education-item">
-      <h3>University Name</h3>
-      <p class="degree">Bachelor of Technology</p>
-      <p class="year">2020 - 2024</p>
+      <h3>Aurora University</h3>
+      <p class="degree">Master of Computer Applications(MCA)</p>
+      <p class="year">2023 - 2025</p>
       <p class="description">
-        Relevant coursework: Data Structures, Algorithms, Web Development, Database Management
+        Relevant coursework: c++, Java, Python, Algorithms, Web Development, Database Management
       </p>
     </div>
     <div class="education-item">
-      <h3>Higher Secondary School</h3>
-      <p class="degree">Science Stream</p>
+      <h3>Degree (BSC-Maths) </h3>
+      <p class="degree">Maths, Physics, Computerscience</p>
+      <p class="year">2020 - 2023</p>
+      <p class="description">
+        Major subjects: Mathematics, Physics, Computer Science.
+      </p>
+    </div>
+    <div class="education-item">
+      <h3>Intermediate</h3>
+      <p class="degree">Maths, Physics, Chemistry</p>
       <p class="year">2018 - 2020</p>
       <p class="description">
-        Major subjects: Physics, Chemistry, Mathematics, Computer Science
+        Major subjects: Mathematics, Physics, Chemistry.
       </p>
     </div>
   </div>
