--- a/src/app/components/experience/experience.component.html
+++ b/src/app/components/experience/experience.component.html
@@ -1,5 +1,12 @@
-<div class="section" id="experience">
-    <h2>Experience</h2>
+<h2>Experience</h2>
+<div class="experience-container" id="experience">
+    
     <!-- Add your experience content here -->
-    <p>Your experience content goes here...</p>
+    <div class="experience" id="exp">
+      <h3>
+        2024 – <p>3months Python internship at MVG Innovations</p><br>
+        2024 (November) – <p>Frontend Developer at Tech Mindsparc Company</p> <br>
+        2024 – <p>NPTEL exam on Business Organisation and Management</p><br>
+        2025 (February) – <p>Presented a Conference Paper</p></h3>
+    </div>
   </div>
