--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -2,14 +2,7 @@
   <h2>About Me</h2>
   <div class="about-content">
     <p>
-      I'm a developer passionate about crafting accessible, pixel-perfect user interfaces 
-      that blend thoughtful design with robust engineering. My favorite work lies at the 
-      intersection of design and development, creating experiences that not only look great 
-      but are meticulously built for performance and usability.
-    </p>
-    <p>
-      Currently, I'm focused on building accessible, user-centered digital experiences 
-      for various platforms.
+      I am a MCA student passionate about software development, constantly enhancing my knowledge in coding, logical thinking, and problem-solving. I actively engage in hands-on projects, exploring various technologies to deepen my understanding of programming concepts. My approach to work is a blend of dedication and smart thinking, allowing me to efficiently tackle challenges and complete tasks within deadlines.
     </p>
   </div>
 </div>
